// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Backdrop HOC should display a text with a dark backdrop 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    class="c-loVsnb c-loVsnb-dsZDrf-color-dark c-loVsnb-fTgyiV-show-true"
    data-testid="backdrop-dark"
  />
  <div
    style="outline: none;"
    tabindex="0"
  >
    <div>
      TEST
    </div>
  </div>
</DocumentFragment>
`;

exports[`Backdrop HOC should display a text with a light backdrop 1`] = `
<DocumentFragment>
  <div
    aria-hidden="false"
    class="c-loVsnb c-loVsnb-kQAVZF-color-light c-loVsnb-fTgyiV-show-true"
    data-testid="backdrop-light"
  />
  <div
    style="outline: none;"
    tabindex="0"
  >
    <div>
      TEST
    </div>
  </div>
</DocumentFragment>
`;
